@@ -2,10 +2,11 @@ package com.talktrip.talktrip.global.security;
 
 import com.talktrip.talktrip.domain.member.entity.Member;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public record CustomMemberDetails(Member member) implements UserDetails {
 
@@ -19,16 +20,36 @@ public record CustomMemberDetails(Member member) implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(member.getMemberRole().name()));
     }
 
     @Override
     public String getPassword() {
-        return null;
+        return null;  // 소셜 로그인이라 password 없음
     }
 
     @Override
     public String getUsername() {
-        return member.getName();
+        return member.getAccountEmail();  // 이메일로 변경
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
     }
 }
